# src/main/java/org/northpole/workshop/base/controller/dao/AdapterDao.java
@@ -6,26 +6,25 @@ import java.io.File;
 import java.io.FileReader;
 import java.util.Scanner;
 import java.io.FileWriter;
+import java.lang.reflect.InvocationTargetException;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
-
 public class AdapterDao<T> implements InterfaceDao<T> {
     private Class<T> clazz;
     private Gson g;
-    protected static String base_path = "data"+File.separatorChar;
-    
+    protected static String base_path = "data" + File.separatorChar;
+
     public AdapterDao(Class<T> clazz) {
         this.clazz = clazz;
         this.g = new GsonBuilder().setPrettyPrinting().create();
     }
 
-
-    private  String readFile()throws Exception{
+    private String readFile() throws Exception {
         File file = new File(base_path + clazz.getSimpleName() + ".json");
         if (!file.exists()) {
-           saveFile("[]");
+            saveFile("[]");
         }
         StringBuilder sb = new StringBuilder();
         try (Scanner in = new Scanner(new FileReader(file))) {
@@ -40,15 +39,15 @@ public class AdapterDao<T> implements InterfaceDao<T> {
 
     private void saveFile(String data) throws Exception {
         File file = new File(base_path + clazz.getSimpleName() + ".json");
-        if(!file.exists()) {
+        if (!file.exists()) {
             file.createNewFile();
         }
-        //if (!file.exists()) {
-            FileWriter fw = new FileWriter(file);
-            fw.write(data);
-            fw.close();
-            
-        //}
+        // if (!file.exists()) {
+        FileWriter fw = new FileWriter(file);
+        fw.write(data);
+        fw.close();
+
+        // }
         try (java.io.FileWriter writer = new java.io.FileWriter(file)) {
             writer.write(data);
         } catch (Exception e) {
@@ -59,14 +58,14 @@ public class AdapterDao<T> implements InterfaceDao<T> {
     @Override
     public LinkedList<T> listAll() {
         LinkedList<T> lista = new LinkedList<>();
-        try{
+        try {
             String data = readFile();
             T[] m = (T[]) g.fromJson(data, java.lang.reflect.Array.newInstance(clazz, 0).getClass());
             lista.toList(m);
-        }catch(Exception e){
-            //TODO
+        } catch (Exception e) {
+            // TODO
         }
-        
+
         return lista;
     }
 
@@ -80,7 +79,7 @@ public class AdapterDao<T> implements InterfaceDao<T> {
     @Override
     public void update(T obj, Integer pos) throws Exception {
         // TODO Auto-generated method stub
-        //throw new UnsupportedOperationException("Unimplemented method 'update'");
+        // throw new UnsupportedOperationException("Unimplemented method 'update'");
         LinkedList<T> lista = listAll();
         lista.update(obj, pos);
         saveFile(g.toJson(lista.toArray()));
@@ -93,8 +92,51 @@ public class AdapterDao<T> implements InterfaceDao<T> {
     }
 
     @Override
-    public T get(Integer id) throws Exception {
+    public void update_by_id(T obj, Integer id) throws Exception {
         // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'get'");
-}
+        throw new UnsupportedOperationException("Unimplemented method 'update_by_id'");
+    }
+
+    /*
+     * public Boolean delete(Integer id) throws Exception {
+     * LinkedList<T> lista = listAll();
+     * T obj = lista.get(id);
+     * if (obj != null) {
+     * lista.remove(obj);
+     * saveFile(g.toJson(lista.toArray()));
+     * return true;
+     * }
+     * return false;
+     * }
+     */
+
+    @Override
+    public T get(Integer id) throws Exception {
+        if (!listAll().isEmpty())
+            return BinarySearchRecursive(listAll().toArray(), 0, listAll().getSize() - 1, id);
+        else
+            return null;
+    }
+
+    public T BinarySearchRecursive(T[] arr, int a, int b, Integer id) throws Exception {
+        if (a > b) {
+            return null;
+        }
+
+        int n = a + (b - a) / 2;
+
+        Integer currentId = (Integer) getMethod("Id", arr[n]);
+
+        if (currentId.equals(id)) {
+            return arr[n];
+        } else if (currentId > id) {
+            return BinarySearchRecursive(arr, a, n - 1, id);
+        } else {
+            return BinarySearchRecursive(arr, n + 1, b, id);
+        }
+    }
+
+    private Object getMethod(String attribute, T obj) throws Exception {
+        return obj.getClass().getMethod("get" + attribute).invoke(obj);
+    }
 }
